
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint32_t ;



__attribute__((used)) static __inline size_t
VIA_RNG_store(void *buf)
{
 uint32_t retval = 0;
 uint32_t rate = 0;
 if (rate == 0)
  return (retval&0x1f);
 return (0);
}
