; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/random/extr_nehemiah.c_VIA_RNG_store.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/random/extr_nehemiah.c_VIA_RNG_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @VIA_RNG_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @VIA_RNG_store(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %4, align 8
  store i64 0, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i64, i64* %4, align 8
  %10 = and i64 %9, 31
  store i64 %10, i64* %2, align 8
  br label %12

11:                                               ; preds = %1
  store i64 0, i64* %2, align 8
  br label %12

12:                                               ; preds = %11, %8
  %13 = load i64, i64* %2, align 8
  ret i64 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
